--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 </head>
 <body>
     <header>
-        <h1>Welcome to My Simple Website</h1>
+        <h1>Welcome to Website</h1>
         <nav>
             <a href="#about">About</a>
             <a href="#services">Services</a>
