--- a/tnc.html
+++ b/tnc.html
@@ -119,10 +119,10 @@
                        <div class="col-lg-6">
                             <div class="footer-top-cap text-center">
                                 <img src="assets/img/logo/logo_footer.png" alt="" style="max-height:80px">
-                                <span><a href="#">interno.ecellvssut@gmail.com</a></span>
-                                <p>Veer Surendra Sai University of Technology, Burla </p>
-                                <p>Sambalpur, Odisha-768018</p>
-                                <p><i class="far fa-user"></i>Pranjal Jain</p>
+                                <span><a href="#">Intern0#gmail.com</a></span>
+                                <p>Disuza colany collage road </p>
+                                <p>Nashik, Maharastra  422002</p>
+                                <p><i class="far fa-user"></i>intern0</p>
                                 <p><i class="fas fa-phone"></i>8018555755</p>
                             </div>
                        </div>
